# Control-cli

./: .gitattributes  .gitignore  README.md  pyproject.toml
.control/: agency.yaml
.control/briefings/: mission_001.md  mission_002.md  mission_003.md  mission_004.md  mission_005.md  mission_006.md  mission_007.md  mission_008.md  mission_009.md  mission_010.md  mission_011.md  mission_012.md  mission_013.md
.control/dossiers/: 99.md  max.md
.control/inboxes/: 99.md  README.md  max86.md
.control/outputs/: agent_99_clone_summary.md  agent_max86_clone_summary.md  cli_technical_analysis_mission_001.md  project_inventory.md
.control/skills/analyze_project/: logic.py  manifest.yaml
.control/skills/clone_agent_context/: logic.py
.control/skills/smoke/: logic.py
.control/skills/sync_inboxes/: logic.py
src/control/: __init__.py  cli.py
src/control_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
